Add all aria-labels and img alt texts

--- a/contact.html
+++ b/contact.html
@@ -22,9 +22,9 @@
             </div>
             
             <ul class="links">
-                <li><a href="index.html">Home</a></li>
-                <li><a href="people.html">People</a></li>
-                <li><a href="places.html">Places</a></li>
+                <li><a href="index.html" aria-label="Go to home page">Home</a></li>
+                <li><a href="people.html" aria-label="Go to people page">People</a></li>
+                <li><a href="places.html" aria-label="Go to places page">Places</a></li>
                 <li><a href="contact.html" class="active">Contact</a></li>
             </ul>
             <label for="nav-toggle" class="burger-menu">
@@ -45,9 +45,9 @@
                     <div class="contact-form">
                         <h2>Contact Us</h2>
                         <form class="contact" action="" method="post">
-                            <input type="text" name="name" class="contact-text-box" placeholder="Your Name" required>
-                            <input type="email" name="email" class="contact-text-box" placeholder="Your Email" required>
-                            <textarea name="message" rows="5" placeholder="Your Message" required></textarea>
+                            <input type="text" name="name" class="contact-text-box" placeholder="Your Name" aria-label="Enter your name here" required>
+                            <input type="email" name="email" class="contact-text-box" placeholder="Your Email" aria-label="Enter your email here" required>
+                            <textarea name="message" rows="5" placeholder="Your Message" aria-label="Enter your message here" required></textarea>
                             <input type="submit" name="submit" class="send-btn" value="Send">
                         </form>
                     </div>
@@ -59,28 +59,28 @@
             <div class="socials">
                 <ul>
                     <li>
-                        <a href="https://facebook.com" target="_blank" rel="noopener">
+                        <a href="https://facebook.com" target="_blank" rel="noopener" aria-label="Go to Facebook page">
                             <i class="fa-brands fa-facebook-f"></i>
                         </a>
                     </li>
                 </ul>
                 <ul>
                     <li>
-                        <a href="https://instagram.com" target="_blank" rel="noopener">
+                        <a href="https://instagram.com" target="_blank" rel="noopener" aria-label="Go to Instagram page">
                             <i class="fa-brands fa-instagram"></i>
                         </a>
                     </li>
                 </ul>
                 <ul>
                     <li>
-                        <a href="https://twitter.com" target="_blank" rel="noopener">
+                        <a href="https://twitter.com" target="_blank" rel="noopener" aria-label="Go to Twitter page">
                             <i class="fa-brands fa-twitter"></i>
                         </a>
                     </li>
                 </ul>
                 <ul>
                     <li>
-                        <a href="https://pinterest.com" target="_blank" rel="noopener">
+                        <a href="https://pinterest.com" target="_blank" rel="noopener" aria-label="Go to Pinterest page">
                             <i class="fa-brands fa-pinterest-p"></i>
                         </a>
                     </li>
