--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
             </div>
             
             <ul class="links">
-                <li><a href="index.html" class="active">Home</a></li>
-                <li><a href="people.html">People</a></li>
-                <li><a href="places.html">Places</a></li>
-                <li><a href="contact.html">Contact</a></li>
+                <li><a href="index.html" class="active" aria-label="Go to Home page">Home</a></li>
+                <li><a href="people.html" aria-label="Go to People page">People</a></li>
+                <li><a href="places.html" aria-label="Go to Places page">Places</a></li>
+                <li><a href="contact.html" aria-label="Go to Contact page">Contact</a></li>
             </ul>
             <label for="nav-toggle" class="burger-menu">
                 <div class="line"></div>
@@ -37,7 +37,7 @@
         </nav>
 
         <header class="header">
-            <div id="header-image"></div>
+            <div id="header-image" alt="An image of the Dark Hedges in Northern Ireland"></div>
             <div id="header-text">
                 <h3>Not all those who wander...</h3>
             </div>
@@ -73,13 +73,13 @@
                 <br>
                 <div class="split">
                     <div>
-                        <img src="assets/images/freney2.jpg" alt="">
+                        <img src="assets/images/freney2.jpg" alt="An illustration of an outlaw on horseback">
                     </div>
                     <div>
                         <br>
                         <p>It would be unwise to avoid speaking about the external factors that would have played a large
                             role in the making of notoriety. So, we have a look at the Irish diaspora today and events that caused such large exoduses.
-                            Check out the where, why and what lead to some infamous exports in our 'Places' page <a href="places.html" >here</a>.</p>
+                            Check out the where, why and what lead to some infamous exports in our 'Places' page <a href="places.html" aria-label="Go to Places page">here</a>.</p>
                     </div>
                 </div>
             </div>
@@ -91,19 +91,19 @@
                 <div class="card-image card1"></div>
                 <h2>Typhoid Mary</h2>
                 <p>The seemingly innocuous cook in New York who carried a deadly secret...</p>
-                <a href="people.html">Read more</a>
+                <a href="people.html" aria-label="Read more about Typhoid Mary">Read more</a>
             </div>
             <div class="card">
                 <div class="card-image card2"></div>
                 <h2>James Jameson</h2>
                 <p>The adventurer, artist and whiskey heir with a dark curiosity for cannibalism...</p>
-                <a href="people.html">Read more</a>
+                <a href="people.html" aria-label="Read more about James Jameson">Read more</a>
             </div>
             <div class="card">
                 <div class="card-image card3"></div>
                 <h2>Andrew Stoney</h2>
                 <p>Aristocrat, politician, lawman, adventurer, playboy, conman and killer.</p>
-                <a href="places.html">Read more</a>
+                <a href="places.html" aria-label="Read more about Andrew Stoney">Read more</a>
             </div>
         </section>
 
@@ -111,28 +111,28 @@
             <div class="socials">
                 <ul>
                     <li>
-                        <a href="https://facebook.com" target="_blank" rel="noopener">
+                        <a href="https://facebook.com" target="_blank" rel="noopener" aria-label="Go to Facebook page">
                             <i class="fa-brands fa-facebook-f"></i>
                         </a>
                     </li>
                 </ul>
                 <ul>
                     <li>
-                        <a href="https://instagram.com" target="_blank" rel="noopener">
+                        <a href="https://instagram.com" target="_blank" rel="noopener" aria-label="Go to Instagram page">
                             <i class="fa-brands fa-instagram"></i>
                         </a>
                     </li>
                 </ul>
                 <ul>
                     <li>
-                        <a href="https://twitter.com" target="_blank" rel="noopener">
+                        <a href="https://twitter.com" target="_blank" rel="noopener" aria-label="Go to Twitter page">
                             <i class="fa-brands fa-twitter"></i>
                         </a>
                     </li>
                 </ul>
                 <ul>
                     <li>
-                        <a href="https://pinterest.com" target="_blank" rel="noopener">
+                        <a href="https://pinterest.com" target="_blank" rel="noopener" aria-label="Go to Pinterest page">
                             <i class="fa-brands fa-pinterest-p"></i>
                         </a>
                     </li>
