--- a/people.html
+++ b/people.html
@@ -24,10 +24,10 @@
             </div>
             
             <ul class="links">
-                <li><a href="index.html">Home</a></li>
+                <li><a href="index.html" aria-label="Go to home page">Home</a></li>
                 <li><a href="people.html" class="active">People</a></li>
-                <li><a href="places.html">Places</a></li>
-                <li><a href="contact.html">Contact</a></li>
+                <li><a href="places.html" aria-label="Go to Places page">Places</a></li>
+                <li><a href="contact.html" aria-label="Go to Contact page">Contact</a></li>
             </ul>
             <label for="nav-toggle" class="burger-menu">
                 <div class="line"></div>
@@ -50,7 +50,7 @@
                 <br>
                 <div class="split">
                     <div>
-                        <img src="assets/images/Typhoid_Mary.jpg" alt="">
+                        <img src="assets/images/Typhoid_Mary.jpg" alt="A photo of Mary Mallon in a hospital bed">
                     </div>
                     <div>
                         <br>
@@ -80,7 +80,7 @@
                         <br>
                     </div>
                     <div>
-                        <img src="assets/images/Mallon-Mary_01.jpg" alt="">
+                        <img src="assets/images/Mallon-Mary_01.jpg" alt="A public warning newspaper illustration of Mary Mallon">
                     </div>
                 </div>
             </div>
@@ -90,7 +90,7 @@
             <div class="container">
                 <div class="split">
                     <div>
-                        <img src="assets/images/mary2.webp" alt="">
+                        <img src="assets/images/mary2.webp" alt="A photo of Mary Mallon in quarantine">
                     </div>
                     <div>
                         <br>
@@ -103,7 +103,7 @@
                             and after two more deaths, the authorities caught up and this time Mallon was to spend the 
                             rest of her life quarantined on Brother Island, New York.</p>
                             <br>
-                        <p>Read the full story <a href="https://en.wikipedia.org/wiki/Mary_Mallon" target="_blank">here</a>.</p>
+                        <p>Read the full story <a href="https://en.wikipedia.org/wiki/Mary_Mallon" target="_blank" aria-label="Go to wikipedia story">here</a>.</p>
                     </div>
                 </div>
             </div>
@@ -126,7 +126,7 @@
                         <br>
                     </div>
                     <div>
-                        <img src="assets/images/james-jameson.jpg" alt="">
+                        <img src="assets/images/james-jameson.jpg" alt="A photo of James Jameson">
                     </div>
                 </div>
             </div>
@@ -136,7 +136,7 @@
             <div class="container">
                 <div class="split">
                     <div>
-                        <img src="assets/images/stanley.jpg" alt="">
+                        <img src="assets/images/stanley.jpg" alt="A photo of Morton Stanley with a boy from an African tribe">
                     </div>
                     <div>
                         <br>
@@ -168,11 +168,11 @@
                         <p>Jameson passed away shortly after the accusations and the controversy was quickly swept under the carpet. However, the 
                             media focus was enough so that such an expedition was the last of its kind.</p>
                         <br>
-                        <p>Read the full story <a href="https://en.wikisource.org/wiki/Dictionary_of_National_Biography,_1885-1900/Jameson,_James_Sligo" target="_blank">here</a>.</p>
+                        <p>Read the full story <a href="https://en.wikisource.org/wiki/Dictionary_of_National_Biography,_1885-1900/Jameson,_James_Sligo" target="_blank" aria-label="Go to wikipedia story">here</a>.</p>
                         <br>
                     </div>
                     <div>
-                        <img src="assets/images/jameson2.jpg" alt="">
+                        <img src="assets/images/jameson2.jpg" alt="An drawing of meeting a tribe on the expedition">
                     </div>
                 </div>
             </div>
@@ -185,7 +185,7 @@
                 <br>
                 <div class="split">
                     <div>
-                        <img src="assets/images/stoney.jpg" alt="">
+                        <img src="assets/images/stoney.jpg" alt="An illustration of Andrew Stoney">
                     </div>
                     <div>
                         <br>
@@ -216,7 +216,7 @@
                         <br>
                     </div>
                     <div>
-                        <img src="assets/images/maryBowes.jpg" alt="">
+                        <img src="assets/images/maryBowes.jpg" alt="A painting of Mary Bowes and ex-husband">
                     </div>
                 </div>
             </div>
@@ -226,7 +226,7 @@
             <div class="container">
                 <div class="split">
                     <div>
-                        <img src="assets/images/stoney2.jpg" alt="">
+                        <img src="assets/images/stoney2.jpg" alt="An illustration of Andrew Stoney in court">
                     </div>
                     <div>
                         <br>
@@ -239,7 +239,7 @@
                             a stunning film directed by Stanley Kubrick.
                         </p>
                         <br>
-                        <p>Read the full story <a href="https://en.wikipedia.org/wiki/Andrew_Robinson_Stoney" target="_blank">here</a>.</p>
+                        <p>Read the full story <a href="https://en.wikipedia.org/wiki/Andrew_Robinson_Stoney" target="_blank" aria-label="Go to wikipedia story">here</a>.</p>
                     </div>
                 </div>
             </div>
