--- a/places.html
+++ b/places.html
@@ -24,10 +24,10 @@
             </div>
             
             <ul class="links">
-                <li><a href="index.html">Home</a></li>
-                <li><a href="people.html">People</a></li>
+                <li><a href="index.html" aria-label="Go to Home page">Home</a></li>
+                <li><a href="people.html" aria-label="Go to People page">People</a></li>
                 <li><a href="place.html" class="active">Places</a></li>
-                <li><a href="contact.html">Contact</a></li>
+                <li><a href="contact.html" aria-label="Go to Contact page">Contact</a></li>
             </ul>
             <label for="nav-toggle" class="burger-menu">
                 <div class="line"></div>
@@ -71,7 +71,7 @@
             <div class="container">
                 <div class="split">
                     <div>
-                        <img src="assets/images/famineShip.webp" alt="">
+                        <img src="assets/images/famineShip.webp" alt="An illustration of a famine ship">
                     </div>
                     <br>
                     <div>
@@ -97,7 +97,7 @@
                             <br>
                     </div>
                     <div>
-                        <img src="assets/images/no_irish.jpg" alt="">
+                        <img src="assets/images/no_irish.jpg" alt="A photo of a sign saying No Irish">
                     </div>
                 </div>
             </div>
@@ -107,7 +107,7 @@
             <div class="container">
                 <div class="split">
                     <div>
-                        <img src="assets/images/irishMigrationMap1.jpg" alt="">
+                        <img src="assets/images/irishMigrationMap1.jpg" alt="A map of Irish migration">
                     </div>
                     <br>
                     <div>
@@ -194,7 +194,7 @@
                 <br>
                 <div class="split">
                     <div>
-                        <img src="assets/images/Global-Irish-Diaspora-Map.jpg" alt="">
+                        <img src="assets/images/Global-Irish-Diaspora-Map.jpg" alt="A map of the Irish diaspora">
                     </div>
                     <div>
                         <br>
@@ -215,67 +215,48 @@
                 <div class="card-image card1"></div>
                 <h2>Typhoid Mary</h2>
                 <p>The seemingly innocuous cook in New York who carried a deadly secret...</p>
-                <a href="#">Read more</a>
+                <a href="#" aria-label="Read more about Typhoid Mary">Read more</a>
             </div>
             <div class="card">
                 <div class="card-image card2"></div>
                 <h2>James Jameson</h2>
                 <p>The adventurer, artist and whiskey heir with a dark curiosity for cannibalism...</p>
-                <a href="#">Read more</a>
+                <a href="#" aria-label="Read more about Jameson">Read more</a>
             </div>
             <div class="card">
                 <div class="card-image card3"></div>
                 <h2>Andrew Stoney</h2>
                 <p>Aristocrat, politician, lawman, adventurer, playboy, conman and killer.</p>
-                <a href="#">Read more</a>
+                <a href="#" aria-label="Read more about Andrew Stoney">Read more</a>
             </div>
         </section>
-
-        <!-- <section style="background-color: orange;">
-            <div class="container">
-                <h2 class="text-center">The Diaspora</h2>
-                <div class="split">
-                    <div>
-                        <p>A small island with a big footprint. From Tipperary to Timbuktu, the Irish are all over.</p>
-                        <p>The vast majority of Irish emigrants today are young, well-educated and skilled people 
-                            coming from an affluent country. They leave seeking opportunity, adventure or education abroad.
-                            With internet and travel accessibility now it's relative easy for emigrants to keep in touch
-                            with loved ones and to take trips home.</p>
-                    </div>
-                    <div>
-                        <img src="assets/images/irishMigrationMap1.jpg" alt="">
-                    </div>
-                </div>
-            </div>
-        </section> -->
-        
 
         <footer>
             <div class="socials">
                 <ul>
                     <li>
-                        <a href="https://facebook.com" target="_blank" rel="noopener">
+                        <a href="https://facebook.com" target="_blank" rel="noopener" aria-label="Go to Facebook page">
                             <i class="fa-brands fa-facebook-f"></i>
                         </a>
                     </li>
                 </ul>
                 <ul>
                     <li>
-                        <a href="https://instagram.com" target="_blank" rel="noopener">
+                        <a href="https://instagram.com" target="_blank" rel="noopener" aria-label="Go to Instagram page">
                             <i class="fa-brands fa-instagram"></i>
                         </a>
                     </li>
                 </ul>
                 <ul>
                     <li>
-                        <a href="https://twitter.com" target="_blank" rel="noopener">
+                        <a href="https://twitter.com" target="_blank" rel="noopener" aria-label="Go to Twitter page">
                             <i class="fa-brands fa-twitter"></i>
                         </a>
                     </li>
                 </ul>
                 <ul>
                     <li>
-                        <a href="https://pinterest.com" target="_blank" rel="noopener">
+                        <a href="https://pinterest.com" target="_blank" rel="noopener" aria-label="Go to Pinterest page">
                             <i class="fa-brands fa-pinterest-p"></i>
                         </a>
                     </li>
