Change selectors for validation

--- a/index.html
+++ b/index.html
@@ -29,15 +29,15 @@
                 <li><a href="places.html" aria-label="Go to Places page">Places</a></li>
                 <li><a href="contact.html" aria-label="Go to Contact page">Contact</a></li>
             </ul>
-            <label for="nav-toggle" class="burger-menu">
+            <div id="nav-toggle" class="burger-menu">
                 <div class="line"></div>
                 <div class="line"></div>
                 <div class="line"></div>
-            </label>
+            </div>
         </nav>
 
         <header class="header">
-            <div id="header-image" alt="An image of the Dark Hedges in Northern Ireland"></div>
+            <div id="header-image"></div>
             <div id="header-text">
                 <h3>Not all those who wander...</h3>
             </div>
