Add readme.md content

--- a/contact.html
+++ b/contact.html
@@ -8,12 +8,12 @@
     <meta name="description" content="Obscure and dark Irish history website">
     <meta name="keywords" content="eire dubh, irish, history, obscure, dark, irish diaspora, emigrants">
 
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Uncial+Antiqua&display=swap">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Montserrat&family=Uncial+Antiqua&display=swap">
     <link rel="stylesheet" href="assets/css/styles.css">
     <title>Éire Dubh</title>
 </head>
 
-<body>
+<body style="background-color:black;">
 
         <nav>
             <input id="nav-toggle" type="checkbox">
@@ -44,7 +44,7 @@
                     </div>
                     <div class="contact-form">
                         <h2>Contact Us</h2>
-                        <form class="contact" action="" method="post">
+                        <form class="contact" action="https://formdump.codeinstitute.net/" method="post">
                             <input type="text" name="name" class="contact-text-box" placeholder="Your Name" aria-label="Enter your name here" required>
                             <input type="email" name="email" class="contact-text-box" placeholder="Your Email" aria-label="Enter your email here" required>
                             <textarea name="message" rows="5" placeholder="Your Message" aria-label="Enter your message here" required></textarea>
