--- a/people.html
+++ b/people.html
@@ -10,7 +10,7 @@
 
     <script src="https://kit.fontawesome.com/ao765d05399.js" crossorigin="anonymous"></script>
 
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Uncial+Antiqua&display=swap">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Montserrat&family=Uncial+Antiqua&display=swap">
     <link rel="stylesheet" href="assets/css/styles.css">
     <title>Éire Dubh</title>
 </head>
