--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <script src="https://kit.fontawesome.com/ao765d05399.js" crossorigin="anonymous"></script>
 
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Uncial+Antiqua&display=swap">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Montserrat&family=Uncial+Antiqua&display=swap">
     <link rel="stylesheet" href="assets/css/styles.css">
     <title>Éire Dubh</title>
 </head>
@@ -29,11 +29,11 @@
                 <li><a href="places.html" aria-label="Go to Places page">Places</a></li>
                 <li><a href="contact.html" aria-label="Go to Contact page">Contact</a></li>
             </ul>
-            <div id="nav-toggle" class="burger-menu">
+            <label for="nav-toggle" class="burger-menu">
                 <div class="line"></div>
                 <div class="line"></div>
                 <div class="line"></div>
-            </div>
+            </label>
         </nav>
 
         <header class="header">
