--- a/places.html
+++ b/places.html
@@ -8,9 +8,7 @@
     <meta name="description" content="Obscure and dark Irish history website">
     <meta name="keywords" content="eire dubh, irish, history, obscure, dark, irish diaspora, emigrants">
 
-    <script src="https://kit.fontawesome.com/ao765d05399.js" crossorigin="anonymous"></script>
-
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Uncial+Antiqua&display=swap">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Montserrat&family=Uncial+Antiqua&display=swap">
     <link rel="stylesheet" href="assets/css/styles.css">
     <title>Éire Dubh</title>
 </head>
