Add scroll behaviour & internal links

--- a/contact.html
+++ b/contact.html
@@ -44,8 +44,8 @@
                     </div>
                     <div class="contact-form">
                         <h2>Contact Us</h2>
-                        <p>Do you have a story or a correction?</p>
-                        <p>Please let us know!</p>
+                        <p>Do you have a story or a correction? Please let us know!</p>
+                        <br>
                         <form class="contact" action="https://formdump.codeinstitute.net/" method="post">
                             <input type="text" name="name" class="contact-text-box" placeholder="Your Name" aria-label="Enter your name here" required>
                             <input type="email" name="email" class="contact-text-box" placeholder="Your Email" aria-label="Enter your email here" required>
