--- a/people.html
+++ b/people.html
@@ -38,10 +38,13 @@
 
         <header class="header">
             <div id="header-image"></div>
-            <div id="header-text">
-                <h3>Not all those who wander...</h3>
-            </div>
         </header>
+
+        <section>
+            <div class="people-menu">
+                <p><span style="color:#FFA500; text-decoration: underline;">Jump to:</span>  <a href="#james">James Jameson</a> | <a href="#andrew">Andrew Stoney</a><p>
+            </div>
+        </section>
 
         <section>
             <div class="container">
@@ -57,7 +60,7 @@
                         <p>Mary Mallon (23/09/1869 - 11/11/1938), commonly known as Typhoid Mary, was a
                          cook believed to have infected between 51 to 122 people with typhoid fever between 1900-1907 in New York. 
                          The infections caused three confirmed deaths, with unconfirmed estimates of up to 50.</p>
-                        <p>Even after suspicions arose towards Mallon as the root cause she persisted in working as a cook, thereby exposing others to the disease. 
+                        <p>Even after suspicions arose towards Mallon as the root cause, she persisted in working as a cook and thereby exposing others to the disease. 
                           Because of that, she was twice forcibly quarantined by authorities, eventually for the final two decades of her life. 
                           Mallon died after a total of nearly 30 years in isolation.</p>
                     </div>
@@ -109,6 +112,8 @@
             </div>
         </section>
 
+        <a id="james"></a>
+
         <section>
             <div class="container">
                 <h2 class="text-center">James Jameson</h2>
@@ -157,7 +162,8 @@
                 <div class="split">
                     <div>
                         <p>By Jameson's own records, he was incredulous of the practice. His part in the event was 
-                            supposedly a misunderstanding and that he made the purchase as a joke. In a letter to his wife he said:</p>
+                            supposedly a misunderstanding and that he made the purchase as a joke, but also admitted to 
+                            using the opportunity to make sketches. In a letter to his wife he said:</p>
                         <p style="font-style: italic;">“I sent my boy for six handkerchiefs, thinking it was all a joke, 
                             and that they were not in earnest, but presently a man appeared, leading a young girl of about 
                             10 years old by the hand, and then I witnessed the most horribly sickening sight I am ever likely to see in my life."</p>
@@ -166,7 +172,7 @@
                         <p style="font-style: italic;">“Jameson, in the meantime, made rough sketches of the horrible scenes...Jameson afterward went 
                             to his tent, where he finished his sketches in watercolors.”</p>
                         <p>Jameson passed away shortly after the accusations and the controversy was quickly swept under the carpet. However, the 
-                            media focus was enough so that such an expedition was the last of its kind.</p>
+                            media focus was large enough so that such an expedition was the last of its kind.</p>
                         <br>
                         <p>Read the full story <a href="https://en.wikisource.org/wiki/Dictionary_of_National_Biography,_1885-1900/Jameson,_James_Sligo" target="_blank" aria-label="Go to wikipedia story">here</a>.</p>
                         <br>
@@ -177,6 +183,8 @@
                 </div>
             </div>
         </section>
+
+        <a id="andrew"></a>
 
         <section>
             <div class="container">
@@ -192,7 +200,7 @@
                         <p>Andrew Robinson Stoney, later renamed Andrew Robinson Stoney-Bowes, (1747-1810) was an 
                             Anglo-Irish member of parliament, high sheriff, soldier and criminal.</p>
                         <p>Stoney grew up in County Tipperary in Ireland. His grandfather, Thomas Stoney, had migrated to 
-                            Ireland from Yorkshire, England, in the wake of the Williamite conquest of Ireland, 1689-91.</p>
+                            Ireland from Yorkshire in the wake of the Williamite conquest of Ireland, 1689-91.</p>
                         <p>While Andrew Stoney-Bowes was a member of parliament for Newcastle-upon-Tyne (1780-4) and also High Sheriff of Durham,
                              he became most well-known for his marriage to Mary Eleanor Bowes, "The Unhappy Countess".</p>
                     </div>
@@ -204,7 +212,7 @@
             <div class="container">
                 <div class="split">
                     <div>
-                        <p>Stoney's first wife, Hannah, died prematurely was it was widely believed that Stoney
+                        <p>Stoney's first wife, Hannah, died prematurely and it was widely believed that Stoney
                              caused her death to assume her inheritance.</p>
                         <p>In 1777 Mary Eleanor Bowes, a widowed countess, met the charming adventurer Andrew Robinson Stoney 
                             who manipulated his way into her household.</p>
@@ -216,7 +224,10 @@
                         <br>
                     </div>
                     <div>
+                        <figure>
                         <img src="assets/images/maryBowes.jpg" alt="A painting of Mary Bowes and ex-husband">
+                        <figcaption style="text-align: center; font-style:italic;">John Lyon and Mary Eleanor Bowes</figcaption>
+                        </figure>
                     </div>
                 </div>
             </div>
