Add keyframe transition to body on load

--- a/index.html
+++ b/index.html
@@ -97,13 +97,13 @@
                 <div class="card-image card2"></div>
                 <h2>James Jameson</h2>
                 <p>The adventurer, artist and whiskey heir with a dark curiosity for cannibalism...</p>
-                <a href="people.html" aria-label="Read more about James Jameson">Read more</a>
+                <a href="people.html" id="james" aria-label="Read more about James Jameson">Read more</a>
             </div>
             <div class="card">
                 <div class="card-image card3"></div>
                 <h2>Andrew Stoney</h2>
                 <p>Aristocrat, politician, lawman, adventurer, playboy, conman and killer.</p>
-                <a href="places.html" aria-label="Read more about Andrew Stoney">Read more</a>
+                <a href="people.html" id="andrew" aria-label="Read more about Andrew Stoney">Read more</a>
             </div>
         </section>
 
