Add readme mockup and live site address

--- a/people.html
+++ b/people.html
@@ -38,6 +38,9 @@
 
         <header class="header">
             <div id="header-image"></div>
+            <div id="header-text">
+                <h3>Not all those who wander...</h3>
+            </div>
         </header>
 
         <section>
