Edit index.html content

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                     <div>
                         <p>As we tend to laud the many successful and famous emigrants, and often attempting to lay claim on those with tenuous connections
                             to our tiny island, many notable people and events abroad have gone under the radar. The phrase <span style="font-style: italic;">"Ah sure, we export all our best stuff!"</span>
-                            isn't so true as not all those who wandered abroad brought <span style="font-style: italic;">craic agus ceol</span>.</p>
+                            isn't so true in some cases.</p>
                     </div>
                 </div>
             </div>
